k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: edent

---

apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
