k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
spec:
  replicas: 1
  # revisionHistoryLimit: 100
  selector:
    matchLabels:
      component: app

  template:
    metadata:
      name: edent-app
      labels:
        component: app

    spec:
      containers:
        - name: client
          # image: juliocesarmidia/edent-app:v1.0.0
          image: httpd:2.4.41

          ports:
            - name: app-port
              containerPort: 80
          # imagePullPolicy: Never

          resources:
            limits:
              memory: "8Mi"
              cpu: "30m"

      restartPolicy: Always

      # volumes:
      #   - name: cred-volume
      #     secret:
      #       secretName: env-secrets
