k8s/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  namespace: default
  labels:
    app: edent

spec:
  replicas: 1
  revisionHistoryLimit: 100

  selector:
    matchLabels:
      app: edent
      tier: mysql

  # strategy:
  #   type: Recreate

  template:
    metadata:
      name: edent-mysql
      labels:
        app: edent
        tier: mysql

    spec:
      containers:
        - name: mysql
          image: mysql:5.7.22
          # imagePullPolicy: Never

          ports:
            - containerPort: 3306
              name: mysql-port

          args: ["--default-authentication-plugin=mysql_native_password"]

          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql

            - name: config-volume
              mountPath: /etc/mysql/mysql.conf.d/mysqld.cnf
              subPath: config.yaml

            - name: data-volume
              mountPath: /docker-entrypoint-initdb.d/data.sql
              subPath: data.yaml

          # resources:
          #   limits:
          #     memory: "16Mi"
          #     cpu: "80m"

          # livenessProbe:
          #   httpGet:
          #     path: /
          #     port: app-port
          #   initialDelaySeconds: 10
          #   timeoutSeconds: 30
          # readinessProbe:
          #   httpGet:
          #     path: /
          #     port: app-port
          #   initialDelaySeconds: 10
          #   timeoutSeconds: 30

      restartPolicy: Always

      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim

        - name: config-volume
          configMap:
            name: mysql-config

        - name: data-volume
          configMap:
            name: mysql-data
