k8s/mysql-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-statefulset
  namespace: edent

spec:
  replicas: 1
  serviceName: mysql-service

  selector:
    matchLabels:
      app: edentmysql

  template:
    metadata:
      name: edent-mysql
      labels:
        app: edentmysql

    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 3306
              name: mysql-port

          volumeMounts:
            # - name: mysql-persistent-volume
            #   mountPath: /var/lib/mysql

            - name: config-volume
              mountPath: /etc/mysql/mysql.conf.d/mysqld.cnf
              subPath: mysql-config.yaml

            - name: data-volume
              mountPath: /docker-entrypoint-initdb.d/data.sql
              subPath: mysql-data.yaml

          resources:
            requests:
              memory: "128Mi"
              cpu: "150m"

            limits:
              memory: "256Mi"
              cpu: "300m"

          args: ["--default-authentication-plugin=mysql_native_password"]

      restartPolicy: Always

      volumes:
        # - name: mysql-persistent-volume
        #   persistentVolumeClaim:
        #     claimName: mysql-pvc

        - name: config-volume
          configMap:
            name: mysql-config

        - name: data-volume
          configMap:
            name: mysql-data
