k8s/client-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: default
  labels:
    app: edent

spec:
  # type: LoadBalancer
  type: ClusterIP

  selector:
    app: edent

  ports:
    - port: 80
      # targetPort: 80
      # protocol: TCP
