k8s/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-service
  namespace: edent

spec:
  type: ClusterIP

  selector:
    app: edentclient

  ports:
    - port: 80
      targetPort: client-port
      protocol: TCP
