k8s/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: edent

spec:
  type: ClusterIP

  selector:
    app: edentmysql

  ports:
    - port: 3306
      targetPort: mysql-port
      protocol: TCP

# kubectl exec -it $(kubectl get pod | grep mysql | awk '{print $1}') bash
# mysql -u $MYSQL_USER -p$MYSQL_PASSWORD -h $MYSQL_HOST $MYSQL_DATABASE
